--- a/CloudDeck/Info.plist
+++ b/CloudDeck/Info.plist
@@ -15,5 +15,16 @@
 			</array>
 		</dict>
 	</array>
+    <key>UTExportedTypeDeclarations</key>
+    <array>
+        <dict>
+            <key>UTTypeIdentifier</key>
+            <string>dev.pbh.clouddeckcard</string>
+            <key>UTTypeConformsTo</key>
+            <array>
+                <string>public.data</string>
+            </array>
+        </dict>
+    </array>
 </dict>
 </plist>
